# Jarvis-M45

./: .gitignore  ENHANCED_CAPABILITIES.md  WEB_INTERFACE_GUIDE.md  WEB_INTERFACE_README.md  http_server.py  index.html  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  ui.py  websocket_server.py
actions/: api_controller.py  automation.py  browser_control.py  code_helper.py  computer_settings.py  desktop.py  file_controller.py  file_processor.py  flight_finder.py  open_app.py  pip_mode.py  screen_processor.py  system_command.py  system_explorer.py  system_learning.py  web_search.py  youtube_video.py
agent/: error_handler.py  executor.py  planner.py
build_tools/: build.bat  build.command  build.sh  jarvios-m45.spec
core/: prompt.txt
web/: README.md  http_server.py  index.html  websocket_server.py
