[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvios-m45"
version = "2.0.0"
description = "J.A.R.V.I.S. M45 — AI Voice Assistant"
readme = "readme.md"
license = {text = "Unlicense"}
authors = [
    {name = "Lintshiwe Ntoampi"},
]
requires-python = ">=3.10"
keywords = [
    "ai", "assistant", "voice", "gemini", "jarvis", "llm",
    "automation", "desktop", "cross-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Public Domain",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sounddevice>=0.4.7",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    "playwright>=1.40.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "mss>=9.0.0",
    "psutil>=5.9.0",
    "send2trash>=1.8.0",
    "youtube-transcript-api>=0.6.0",
    "python-pptx>=0.6.0",
    "pyqt6>=6.6.0",
]

[project.optional-dependencies]
windows = [
    "pygetwindow>=0.0.9",
    "pywinauto>=0.6.8",
    "win10toast>=0.9",
    "comtypes>=1.4.0",
    "pycaw>=20240210",
]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
jarvios = "main:main"

[project.urls]
Homepage = "https://github.com/Lintshiwe/Jarvis-M45"
Issues = "https://github.com/Lintshiwe/Jarvis-M45/issues"

[tool.setuptools]
packages = [
    "actions",
    "agent",
    "config",
    "core",
    "memory",
]

[tool.setuptools.package-data]
core = ["prompt.txt"]
"*" = ["*.png"]

[tool.pyinstaller]
# PyInstaller configuration hints
name = "JARVIS-M45"
onefile = true
windowed = true
hidden_imports = [
    "google.genai", "google.generativeai", "google.api_core",
    "google.auth", "grpc",
    "sounddevice", "_sounddevice", "soundfile",
    "playwright", "playwright.async_api", "playwright._impl",
    "PyQt6", "PyQt6.QtCore", "PyQt6.QtGui", "PyQt6.QtWidgets", "PyQt6.sip",
    "pptx", "PIL", "PIL.Image",
    "duckduckgo_search", "bs4", "requests", "urllib3",
    "pyautogui", "pyperclip", "numpy", "cv2", "mss", "psutil",
    "send2trash", "youtube_transcript_api",
]

[tool.ruff]
# Linting configuration (if using ruff)
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
